welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:108: error: Unmatched closing brace '}' ignored here
}
^