welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code


def growFlowers(){
  setCouleurBrosse(Color.RED)
  growFlowers()
  gauche()
  avance()
  avance()
  avance()
  setCouleurBrosse(Color.BLUE)
  Motif()
  gauche()
  recule()
  recule()
  recule()
  recule()
  recule()
  gauche()
  avance()
  avance()
  droite()
  avance()
  avance()
  setCouleurBrosse(Color.ORANGE)
  Motif()
  recule()
  recule()
  recule()
  gauche()
  avance()
  avance()
  droite()
  setCouleurBrosse(Color.PINK)
  Motif()
  gauche()
  avance()
  avance()
  avance()
  gauche()
  recule()
  recule()
  recule()
  recule()
  recule()
}

def Motif(){
  baisseBrosse()
  avance()
  avance()
  recule()
  droite()
  avance()
  recule()
  gauche()
  gauche()
  avance()
  leveBrosse()
  setCouleurBrosse(Color.YELLOW)
  recule()
  baisseBrosse()
  leveBrosse()
}

setCouleurBrosse(Color.RED)
  growFlowers()
  gauche()
  avance()
  avance()
  avance()
  setCouleurBrosse(Color.BLUE)
  Motif()
  gauche()
  recule()
  recule()
  recule()
  recule()
  recule()
  gauche()
  avance()
  avance()
  droite()
  avance()
  avance()
  setCouleurBrosse(Color.ORANGE)
  Motif()
  recule()
  recule()
  recule()
  gauche()
  avance()
  avance()
  droite()
  setCouleurBrosse(Color.PINK)
  Motif()
  gauche()
  avance()
  avance()
  avance()
  gauche()
  recule()
  recule()
  recule()
  recule()
  recule()
}